# nearestPoints

./: CMakeLists.txt
src/: Point.cpp  Point.h  payment.cpp
test/: CMakeLists.txt  PointTest.cpp  payment_check.cpp  point_check.cpp
